firefox scrollbar fix, summary page column fix

--- a/src/components/tabs/Tabs.css
+++ b/src/components/tabs/Tabs.css
@@ -1,9 +1,10 @@
 .gtas-tabs {
   border: none;
   margin-bottom: 3px;
-  max-width: 30%;
+  width: calc((100vw - 300px) / 3);
   flex-wrap: nowrap;
   overflow-x: auto;
+  overflow-y: hidden;
   white-space: nowrap;
 }
 
@@ -12,8 +13,8 @@
 }
 
 * {
-  /* scrollbar-width: thin; */
-  scrollbar-color: blue orange;
+  scrollbar-width: thin;
+  scrollbar-color: #446a92 white;
 }
 
 /* Works on Chrome/Edge/Safari */
