--- a/src/pages/paxDetail/PaxDetail.scss
+++ b/src/pages/paxDetail/PaxDetail.scss
@@ -14,8 +14,24 @@ $transparent: rgba(0, 0, 0, 0.65);
 }
 
 .paxdetail-container {
-  max-height: 70vh;
+  height: calc(100vh - 125px);
   overflow: scroll;
+}
+
+@media (max-width: 1499px) {
+  .paxdetail-container {
+    .card-columns {
+      column-count: 1 !important;
+    }
+  }
+}
+
+@media (min-width: 1500px) {
+  .paxdetail-container {
+    .card-columns {
+      column-count: 2 !important;
+    }
+  }
 }
 
 .paxdetails-action-buttons {
