--- a/src/pages/paxDetail/summary/Summary.scss
+++ b/src/pages/paxDetail/summary/Summary.scss
@@ -5,10 +5,10 @@
 $wco-blue: rgb(0, 119, 200);
 $gtas-white: rgba(255, 255, 255, 0.9);
 
-.summary-container {
-  max-height: 70vh;
-  overflow: scroll;
-}
+// .summary-container {
+//   height: calc(100vh - 125px);
+//   overflow: scroll;
+// }
 
 .summary-container {
   .card-columns {
